Changed the Burrito Recipe to Enchiladas and added ingredients

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  </head>
  <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/burritos.html">Veggie Burritos</a>
+  <a href="recipes/enchiladas.html">Potato and Black Bean Enchiladas</a>
  </body>
 </html>
