Updated Enchilada recipe further with all steps except the last being written.

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -6,30 +6,60 @@
  </head>
  <body>
   <h1>Potato and Black Bean Enchiladas</h1>
-  <img height = "300" width="175" src="../images/VegetarianBurritos.jpg" alt="Veggie Burritos">
+  <img height = "210" width="265" src="../images/enchiladas.jpg" alt="Enchiladas">
   <h2>Description</h2>
-  <p>
-     These potato and black bean enchiladas are delicious and easy to make! The enchiladas are The recipe makes
-     2 servings.
+  <p>Potato and Black Bean Enchiladas with Creamy <em>Queso Rojo</em> and <em> Pico
+     de Gallo </em>
   </p>
-  <h2>Ingredients</h2>
+  <h2>Ingredients:</h2>
   <ul>
-  <li> <strong>Kosher Salt</strong> </li>
-  <li> <strong>Black Pepper</strong> </li>
-  <li> 2 tbsp <strong>Butter</strong> </li>
-  <li> 2 tbsp <strong>All-Purpose or Whole Wheat Flour</strong> </li>
-  <li>12 oz. <strong>Potatoes</strong> </li>
-  <li>12 oz. can <strong>Black Beans</strong> (drained) </li>
-  <li>2 Cloves <strong>Garlic</strong> </li>
-  <li><strong>Scallions</strong> </li>
-  <li>1 <strong>Lime</strong> </li>
-  <li>1 Medium-small <strong>Tomato</strong> </li>
-  <li>1 oz <strong>Cream Cheese</strong> </li>
-  <li>2 oz. shredded <strong>Mexican Cheese Blend</strong> </li>
+   <li> <strong>Kosher Salt</strong> </li>
+   <li> <strong>Black Pepper</strong> </li>
+   <li> <strong>2 tbsp Butter</strong> </li>
+   <li> <strong>2 TBSP. All-Purpose or Whole Wheat Flour</strong> </li>
+   <li> <strong>12 oz. Potatoes</strong> </li>
+   <li> <strong>12 oz. can Black Beans</strong> (drained) </li>
+   <li> <strong>2 Cloves Garlic</strong> </li>
+   <li> <strong>1 bunch Scallions</strong> </li>
+   <li> <strong>1 Lime</strong> </li>
+   <li> <strong>1 cup (500ml) water</strong> </li>
+   <li> <strong>1 Medium-small Tomato</strong> </li>
+   <li> <strong>1 oz Cream Cheese</strong> </li>
+   <li> <strong>1 oz Achiote Paste</strong> </li>
+   <li> <strong>2 oz. shredded Mexican Cheese Blend</strong> </li>
+   <li> <strong>6x 6-inch Flour Tortillas</strong> </li>
+   <li> <strong>Cooking Oil</strong> </li>
   </ul>
   <h2>Step-by-Step Instructions</h2>
-  <h3>Step 1: Pre-heat Oven and Prepare Potatoes</h3>
- <br> 
- <a href="https://dishingouthealth.com/vegetarian-burrito/">source</a>
+  <ol>
+      <li><strong>Pre-heat Oven and Prepare Potatoes:</strong><br> Pre-heat oven to 450&#x2109;
+          (232&#8451;). <strong>Wash and dry produce.</strong> Peel and dice <strong>potatoes
+          </strong>. Place in a medium pot with enough <strong>salted water to cover by 2 in 
+          (5 cm).</strong> Bring to a boil ans cook until tender, 5-7 minutes. Drain and set 
+          aside. </li>
+      <li><strong>Make Pico de Gallo:</strong><br>Meanwhile, finely dice <strong>tomato</strong>. 
+          Trim and thinly slice <strong> scallions</strong> seperating the whites from the 
+          greens. Finely chop <strong> garlic</strong>. Half <strong>lime</strong>; 
+          squeeze <strong>juice from one half</strong> into small bowl. Cut remaining <strong>
+          lime</strong> into wedges. To bowl with <strong>lime juice</strong>, add 
+          <strong>tomato, 1 TBSP scallion greens, and 1 TBSP oil</strong>. Stir to combine; 
+          season with <strong> salt and pepper</strong> to taste.</li>
+      <li><strong>Prepare <em>Queso Rojo</em></strong><br>In pot used to boil potatoes, melt 
+          <strong>2 TBSP butter</strong> over medium heat. Whisk in half of the 
+          <strong>achiote paste</strong> and <strong>2 TBSP Flour</strong>; cook, whisking 
+          constantly, until flour is fully incorporated, 30-60 seconds. Slowly whisk 
+          in <strong>1 cup (250ml) water</strong></li>
+      <li><strong>Make Filling:</strong><br>Once potatos are done, heat a <strong>large drizzle 
+          of oil</strong> in a medium pan over medium-high heat. Add <strong>drained
+          potatoes, scallion whites, beans, garlic, remaing achiote paste,1/4 cup of water
+          </strong>, and a pinch of salt until combined. Cook, stirring occasionally, until
+          liquid has slightly reduced and beans are warmed through,3-4 minutes. Stir in
+          remaining <strong>Mexican Cheese Blend</strong> until thoroughly combined. Transfer
+          filling to a bowl and set aside to cool.</li>
+      <li><strong>Building Enchiladas:</strong><br> Place a small amount of filling on one half
+          of tortilla. Roll up tortillas, starting with filled sides, to form enchiladas. Place,
+          seam sides down, in a lightly oiled 8x8 in baking dish or ovenproof pan.</li>
+
+  </ol>       
  </body>
 </html>
