--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
  </head>
  <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/enchiladas.html">Potato and Black Bean Enchiladas</a>
+  <ul>
+   <li> <a href="recipes/enchiladas.html">Potato and Black Bean Enchiladas</a>
+   </li>
+   <li> <a href="recipes/green_apple_slaw.html">Green Apple Slaw</a> </li>
+  </ul>
  </body>
 </html>
