--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -33,32 +33,35 @@
   <h2>Step-by-Step Instructions</h2>
   <ol>
       <li><strong>Pre-heat Oven and Prepare Potatoes:</strong><br> Pre-heat oven to 450&#x2109;
-          (232&#8451;). <strong>Wash and dry produce.</strong> Peel and dice <strong>potatoes
-          </strong>. Place in a medium pot with enough <strong>salted water to cover by 2 in 
-          (5 cm).</strong> Bring to a boil ans cook until tender, 5-7 minutes. Drain and set 
-          aside. </li>
-      <li><strong>Make Pico de Gallo:</strong><br>Meanwhile, finely dice <strong>tomato</strong>. 
-          Trim and thinly slice <strong> scallions</strong> seperating the whites from the 
-          greens. Finely chop <strong> garlic</strong>. Half <strong>lime</strong>; 
-          squeeze <strong>juice from one half</strong> into small bowl. Cut remaining <strong>
-          lime</strong> into wedges. To bowl with <strong>lime juice</strong>, add 
-          <strong>tomato, 1 TBSP scallion greens, and 1 TBSP oil</strong>. Stir to combine; 
-          season with <strong> salt and pepper</strong> to taste.</li>
+          (232&#8451;). Wash and dry produce. Peel and dice potatoes. Place in a medium pot with 
+	  enough salted water to cover by 2 in (5 cm). Bring to a boil ans cook until tender, 5-7
+          minutes. Drain and set aside. </li>
+      <li><strong>Make Pico de Gallo:</strong><br>Meanwhile, finely dice tomato. 
+          Trim and thinly slice scallions seperating the whites from the 
+          greens. Finely chop garlic. Half lime; 
+          squeeze juice from one half into small bowl. Cut remaining
+          lime into wedges. To bowl with lime juice, add 
+          tomato, 1 TBSP scallion greens, and 1 TBSP oil. Stir to combine; 
+          season with salt and pepper to taste.</li>
       <li><strong>Prepare <em>Queso Rojo</em></strong><br>In pot used to boil potatoes, melt 
-          <strong>2 TBSP butter</strong> over medium heat. Whisk in half of the 
-          <strong>achiote paste</strong> and <strong>2 TBSP Flour</strong>; cook, whisking 
+          2 TBSP butter over medium heat. Whisk in half of the 
+          achiote paste and 2 TBSP Flour; cook, whisking 
           constantly, until flour is fully incorporated, 30-60 seconds. Slowly whisk 
-          in <strong>1 cup (250ml) water</strong></li>
-      <li><strong>Make Filling:</strong><br>Once potatos are done, heat a <strong>large drizzle 
-          of oil</strong> in a medium pan over medium-high heat. Add <strong>drained
+          in 1 cup (250ml) water</li>
+      <li><strong>Make Filling:</strong><br>Once potatos are done, heat a large drizzle 
+          of oil in a medium pan over medium-high heat. Add drained
           potatoes, scallion whites, beans, garlic, remaing achiote paste,1/4 cup of water
-          </strong>, and a pinch of salt until combined. Cook, stirring occasionally, until
+          , and a pinch of salt until combined. Cook, stirring occasionally, until
           liquid has slightly reduced and beans are warmed through,3-4 minutes. Stir in
-          remaining <strong>Mexican Cheese Blend</strong> until thoroughly combined. Transfer
+          remaining Mexican Cheese Blend until thoroughly combined. Transfer
           filling to a bowl and set aside to cool.</li>
       <li><strong>Building Enchiladas:</strong><br> Place a small amount of filling on one half
           of tortilla. Roll up tortillas, starting with filled sides, to form enchiladas. Place,
           seam sides down, in a lightly oiled 8x8 in baking dish or ovenproof pan.</li>
+      <li><strong>Finishing touches:</strong><br>Pour <em>Queso Rojo</em> over enchiladas to 
+          thoroughly coat. Top with <em>Pico de Gallo</em>, sour cream, and remaining scallion
+          greens. Divide the enchiladas between plates and serve with remaining lime wedges on
+          the side.</li>
 
   </ol>       
  </body>
