Pretzel Salad Recipe added instructions and added to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <li> <a href="recipes/enchiladas.html">Potato and Black Bean Enchiladas</a>
    </li>
    <li> <a href="recipes/green_apple_slaw.html">Green Apple Slaw</a> </li>
+   <li> <a href="recipes/pretzel_salad.html">Mandarin Orange Pretzel Salad</a> </li>
   </ul>
  </body>
 </html>
