--- a/recipes/green_apple_slaw.html
+++ b/recipes/green_apple_slaw.html
@@ -8,17 +8,18 @@
  <h1>Green Apple Slaw</h1>
  <img height = "250" width="250" src="../images/green_apple_slaw.jpg" 
   alt="Green Apple Slaw">
+ <p>This green apple slaw is a sweet, cheap, and healthy meal that is perfect for any time of year!</p>
  <h2>Ingredients</h2>
  <ul>
-  <li><strong>1 Cup Mayonnaise (may use more)</strong></li>
-  <li><strong>3 tbsp honey</strong></li>
-  <li><strong>1 tsp poppy seeds</strong></li>
-  <li><strong>4 Granny Smith Apples, quartered and thinly sliced</strong>
+  <li>1 Cup Mayonnaise (may use more)</li>
+  <li>3 tbsp honey</li>
+  <li>1 tsp poppy seeds</li>
+  <li>4 Granny Smith Apples, quartered and thinly sliced
   </li>
-  <li><strong>1-2 tbsp lemon juice</strong></li>
-  <li><strong>2 cups coarsely chopped cabbage</strong></li>
-  <li><strong>3/4 cup seedless green grapes, halved</strong></li>
-  <li><strong>3/4 cup thinly sliced celery</strong></li>
+  <li>1-2 tbsp lemon juice</li>
+  <li>2 cups coarsely chopped cabbage</li>
+  <li>3/4 cup seedless green grapes, halved</li>
+  <li>3/4 cup thinly sliced celery</li>
  </ul>
  <h2>Directions</h2>
  <ol>
