--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -13,22 +13,22 @@
   </p>
   <h2>Ingredients:</h2>
   <ul>
-   <li> <strong>Kosher Salt</strong> </li>
-   <li> <strong>Black Pepper</strong> </li>
-   <li> <strong>2 tbsp Butter</strong> </li>
-   <li> <strong>2 TBSP. All-Purpose or Whole Wheat Flour</strong> </li>
-   <li> <strong>12 oz. Potatoes</strong> </li>
-   <li> <strong>12 oz. can Black Beans</strong> (drained) </li>
-   <li> <strong>2 Cloves Garlic</strong> </li>
-   <li> <strong>1 bunch Scallions</strong> </li>
-   <li> <strong>1 Lime</strong> </li>
-   <li> <strong>1 cup (500ml) water</strong> </li>
-   <li> <strong>1 Medium-small Tomato</strong> </li>
-   <li> <strong>1 oz Cream Cheese</strong> </li>
-   <li> <strong>1 oz Achiote Paste</strong> </li>
-   <li> <strong>2 oz. shredded Mexican Cheese Blend</strong> </li>
-   <li> <strong>6x 6-inch Flour Tortillas</strong> </li>
-   <li> <strong>Cooking Oil</strong> </li>
+   <li>Kosher Salt</li>
+   <li>Black Pepper</li>
+   <li>2 tbsp Butter</li>
+   <li>2 TBSP. All-Purpose or Whole Wheat Flour</li>
+   <li>12 oz. Potatoes</li>
+   <li>12 oz. can Black Beans(drained) </li>
+   <li>2 Cloves Garlic</li>
+   <li>1 bunch Scallions</li>
+   <li>1 Lime</li>
+   <li>1 cup (500ml) water</li>
+   <li>1 Medium-small Tomato</li>
+   <li>1 oz Cream Cheese</li>
+   <li>1 oz Achiote Paste</li>
+   <li>2 oz. shredded Mexican Cheese Blend</li>
+   <li>6x 6-inch Flour Tortillas</li>
+   <li>Cooking Oil</li>
   </ul>
   <h2>Step-by-Step Instructions</h2>
   <ol>
